--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,115 @@
+ul, li {list-style: none; padding: 0;}
+
 .loader {
     width: 100%;
     min-height: 40px;
     background-image: url("../img/loader.gif");
     background-repeat: no-repeat;
     background-position: center;
+}
+
+.content {
+    width: 1000px;
+    padding: 20px;
+    margin: 0 auto;
+}
+
+.clear {
+    clear: both;
+}
+
+
+#dcomment-block {
+    width: 100%;
+}
+#dcomment-block form {
+    margin-bottom: 30px;
+}
+
+#dcomment-block form textarea {
+    width: 96%;
+    min-height: 80px;
+    padding: 5px 2%;
+    border-radius: 5px;
+}
+
+#dcomment-block form input {
+    border-radius: 20px;
+    min-width: 90px;
+}
+
+.comment-body {
+    margin: 10px 0;
+    white-space: pre;
+    border-radius: 10px;
+    padding: 10px;
+    -webkit-box-shadow: 3px 4px 16px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 3px 4px 16px -2px rgba(0,0,0,0.75);
+    box-shadow: 3px 4px 16px -2px rgba(0,0,0,0.75);
+}
+
+.commen-list {
+    list-style-type: none;
+    margin: 0;
+}
+
+
+.children .comment {
+    margin-left: 40px;
+}
+.children .children .comment {
+    margin-left: 40px;
+}
+
+.children .children .children .comment {
+    margin-left: 40px;
+}
+.children .children .children .children .comment {
+    margin-left: 0;
+}
+
+.comment-deleted > .comment-body {
+    color: #ccc;
+}
+
+.dcomment-replay > input[type=submit],
+.dcomment-add > input[type=submit] {
+    float: right;
+}
+
+.dcomment-options {
+    float: right;
+}
+
+.dcomment-rating,
+.dcomment-rating-buttons {
+    float: left;
+    margin: 0 5px;
+}
+
+.login-registration-block {
+    /*display: none;*/
+    margin-bottom: 30px;
+}
+
+.login-registration-block > div {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.login-registration-block form {
+    width: 100%;
+    text-align: center;
+}
+.login-registration-block input {
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.login-registration-block input[type=submit] {
+    width: 50%;
+}
+
+.registration-block, .login-block {
+    display: none;
 }
